--- a/account.html
+++ b/account.html
@@ -29,13 +29,12 @@
         }
         .create-account-container input[type="text"],
         .create-account-container input[type="password"] {
-            width: calc(100% - 22px); /* Adjust the width to fit within the container */
+            width: calc(100% - 22px);
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
-            border-right: 1px solid #ccc; /* Add border on the right side */
             border-radius: 4px;
-            box-sizing: border-box; /* Ensure padding and border are included in the width */
+            box-sizing: border-box;
         }
         .create-account-container button {
             width: 100%;
@@ -66,6 +65,6 @@
             <button type="submit">Create Account</button>
         </form>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
