--- a/synthese.html
+++ b/synthese.html
@@ -56,22 +56,13 @@
         <img src="ISEN-Brest-1.png" alt="Bank Logo" class="logo">
         <h2>Account Summary</h2>
         <div class="balance">
-            Balance: $1,234.56
+            Balance: <div id = 'balance'> </div>
         </div>
-        <div class="transactions">
-            <div class="transaction">
-                <span>Transaction 1</span>
-                <span>$100.00</span>
-            </div>
-            <div class="transaction">
-                <span>Transaction 2</span>
-                <span>$50.00</span>
-            </div>
-            <div class="transaction">
-                <span>Transaction 3</span>
-                <span>$200.00</span>
-            </div>
+        <div id="transactions">
         </div>
     </div>
 </body>
 </html>
+
+<script src="js/ajax.js"></script>
+<script src="js/synthese.js"></script>
