installation path traversal

--- a/synthese.html
+++ b/synthese.html
@@ -60,6 +60,7 @@
         </div>
         <div id="transactions">
         </div>
+        <button id="downloadLogs">Télécharger les logs</button>
     </div>
 </body>
 </html>
