--- a/index.html
+++ b/index.html
@@ -8,71 +8,97 @@
     <title>Bank Account Login</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
+            font-family: 'Arial', sans-serif;
+            background-color: #f7f7f7;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-        }
-        .login-container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-            margin: auto;
-            border: 1px solid #ccc;
-        }
-        .login-container h2 {
-            margin-bottom: 20px;
             color: #333;
         }
+
+        .login-container {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 350px;
+            margin: auto;
+            border: 1px solid #ddd;
+        }
+
+        .login-container h2 {
+            text-align: center;
+            margin-bottom: 30px;
+            color: #2c3e50;
+        }
+
         .login-container input[type="text"],
         .login-container input[type="password"] {
-            width: calc(100% - 22px); /* Adjust the width to fit within the container */
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-right: 1px solid #ccc; /* Add border on the right side */
-            border-radius: 4px;
-            box-sizing: border-box; /* Ensure padding and border are included in the width */
+            width: 100%;
+            padding: 12px 16px;
+            margin: 12px 0;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            box-sizing: border-box;
+            font-size: 16px;
         }
+
+        .login-container input[type="text"]:focus,
+        .login-container input[type="password"]:focus {
+            border-color: #4CAF50;
+            outline: none;
+        }
+
         .login-container button {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             background-color: #4CAF50;
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 6px;
+            font-size: 16px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
+
         .login-container button:hover {
             background-color: #45a049;
         }
+
+        .login-container button:active {
+            background-color: #3e8e41;
+        }
+
         .create-account-button {
             display: block;
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             margin-top: 20px;
             background-color: #4CAF50;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 6px;
             text-align: center;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
+
         .create-account-button:hover {
             background-color: #45a049;
         }
+
         .logo {
             display: block;
             margin: 0 auto 20px;
-            width: 200px;
+            width: 180px;
         }
-        .button {
-            margin-top: 10px; /* Ajustez la valeur selon vos besoins */
+
+        .form-message {
+            text-align: center;
+            color: red;
+            font-size: 14px;
         }
     </style>
 </head>
@@ -83,10 +109,10 @@
         <div>
             <input type="text" name="username" id="user" placeholder="Username" required>
             <input type="password" name="password" id="pwd" placeholder="Password" required>
-            <button type="submit" id="btn-submit" class="button">Login</button>
+            <button type="submit" id="btn-submit">Login</button>
         </div>
-        <p id="form-messages"></p>
-        <button onclick="window.location.href='account.html'" class="button">Create Account</button>
+        <p id="form-messages" class="form-message"></p>
+        <button onclick="window.location.href='account.html'" class="create-account-button">Create Account</button>
     </div>
 </body>
 </html>
