--- a/synthese.html
+++ b/synthese.html
@@ -7,47 +7,124 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
+            background-color: #f7f7f7;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-        }
-        .account-container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 400px;
-            margin: auto;
-            border: 1px solid #ccc;
-        }
-        .account-container h2 {
-            margin-bottom: 20px;
             color: #333;
         }
+
+        .account-container {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            width: 450px;
+            margin: auto;
+            border: 1px solid #ddd;
+        }
+
+        .account-container h2 {
+            margin-bottom: 25px;
+            text-align: center;
+            color: #2c3e50;
+        }
+
         .balance {
             font-size: 24px;
             margin-bottom: 20px;
-            color: #333;
+            color: #4CAF50;
+            text-align: center;
         }
+
         .transactions {
-            margin-top: 20px;
+            margin-top: 30px;
+            max-height: 200px;
+            overflow-y: auto;
         }
+
         .transaction {
             display: flex;
             justify-content: space-between;
-            padding: 10px 0;
-            border-bottom: 1px solid #ccc;
+            padding: 12px 0;
+            border-bottom: 1px solid #ddd;
+            font-size: 16px;
         }
+
         .transaction:last-child {
             border-bottom: none;
         }
+
+        .transaction span {
+            font-weight: bold;
+        }
+
         .logo {
             display: block;
             margin: 0 auto 20px;
-            width: 200px;
+            width: 150px;
+        }
+
+        /* Input fields */
+        input[type="text"] {
+            width: 100%;
+            padding: 12px 16px;
+            margin: 12px 0;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            font-size: 16px;
+            box-sizing: border-box;
+        }
+
+        input[type="text"]:focus {
+            border-color: #4CAF50;
+            outline: none;
+        }
+
+        /* Button styles */
+        button {
+            width: 100%;
+            padding: 12px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        button:active {
+            background-color: #3e8e41;
+        }
+
+        /* Download Button */
+        #downloadLogs {
+            margin-top: 20px;
+            background-color: #3498db;
+            border-radius: 6px;
+        }
+
+        #downloadLogs:hover {
+            background-color: #2980b9;
+        }
+
+        /* Transaction Section */
+        h2 {
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        #form-messages {
+            text-align: center;
+            color: red;
+            font-size: 14px;
         }
     </style>
 </head>
@@ -60,15 +137,15 @@
         </div>
         <div id="transactions">
         </div>
-        <button id="downloadLogs">Télécharger IBAN </button>
+        <button id="downloadLogs">Télécharger IBAN</button>
     </div>
 
-    <div>
+    <div class ="account-container">
         <h2> Nouvelle transaction </h2>
         <input type="text" name="username" id="user_get" placeholder="Username" required>
         <input type="text" name="balance" id="amount" placeholder="Somme à envoyer" required>
-        <input type = "text" name="description" id="description" placeholder="Message" required>
-        <button type="submit" id="btn-submit" class="button"> Realiser la transactions </button>
+        <input type="text" name="description" id="description" placeholder="Message" required>
+        <button type="submit" id="btn-submit" class="button"> Réaliser la transaction </button>
         <p id="form-messages"></p>
     </div>
 </body>
