--- a/admin.html
+++ b/admin.html
@@ -87,7 +87,7 @@
 </head>
 <body>
     <div class="upload-container">
-        <h2>Admin - Upload Fiche Client</h2>
+        <h2>Admin - Upload Fiche Client (format accepté XML/PDF...) </h2>
         <form id="uploadForm" enctype="multipart/form-data">
             <input type="file" id="fileInput" name="clientFile" accept="*" required>
             <button type="submit" id="btn-submit">Upload</button>
