une petite vulne en +, creation de iban / fichier correspondant pour chaque nouvel user

--- a/synthese.html
+++ b/synthese.html
@@ -128,9 +128,12 @@
         }
     </style>
 </head>
-<body>
+
+    
+
     <div class="account-container">
         <img src="ISEN-Brest-1.png" alt="Bank Logo" class="logo">
+        <button id="admin" onclick="window.location.href='admin.html'" style="display: none;"> Accéder aux tableau admin </button>
         <h2>Bienvenue sur votre compe <div id='user'> </div> </h2>
         <div class="balance">
             Balance: <div id = 'balance'> </div>
