--- a/account.html
+++ b/account.html
@@ -94,6 +94,7 @@
             <input type="password" name="password" id="pwd" placeholder="Password" required>
             <button type="submit" id="btn-submit">Create Account</button>
             <p id="form-messages" class="form-message"></p>
+            <button onclick="window.location.href='index.html'" > Retour au login </button>
     </div>
     </div>
 
