docker nouvelle version + quelque flag

--- a/admin.html
+++ b/admin.html
@@ -86,6 +86,7 @@
     </style>
 </head>
 <body>
+    <h1> flag{page_admin_bien_secure} </h1>
     <div class="upload-container">
         <h2>Admin - Upload Fiche Client (format accepté XML/PDF...) </h2>
         <form id="uploadForm" enctype="multipart/form-data">
